<resources>
    <string name="app_name">HSC ICT</string>
    <string name="welcome">Welcome</string>
    <string name="ls1text">Lesson-1</string>
    <string name="lesson_1">Lesson-1</string>
    <string name="hello">Hello</string>
    <string name="chapter_1">Chapter-1</string>
    <string name="chapter_2">Chapter-2</string>
    <string name="chapter_3">Chapter-3</string>
    <string name="chapter_4">Chapter-4</string>
    <string name="chapter_5">Chapter-5</string>
    <string name="chapter_6">Chapter-6</string>
</resources>