<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_700">


    <ScrollView
        android:id="@+id/vscroll1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
      <LinearLayout
          android:id="@+id/linear3"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical">
        <LinearLayout
            android:id="@+id/linear4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:orientation="horizontal" />
        <LinearLayout
            android:id="@+id/linear5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="horizontal">
          <Button
              android:id="@+id/button1"
              android:layout_width="200dp"
              android:layout_height="wrap_content"
              android:padding="8dp"
              android:background="#2196F3"
              android:text="@string/chapter_1"
              android:textSize="16sp"
              android:textStyle="bold"
              android:textColor="#FFFFFF" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linear6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:orientation="horizontal" />
        <LinearLayout
            android:id="@+id/linear7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="horizontal">
          <Button
              android:id="@+id/button2"
              android:layout_width="200dp"
              android:layout_height="wrap_content"
              android:padding="8dp"
              android:background="#2196F3"
              android:text="@string/chapter_2"
              android:textSize="16sp"
              android:textStyle="bold"
              android:textColor="#FFFFFF" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linear8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:orientation="horizontal" />
        <LinearLayout
            android:id="@+id/linear9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="horizontal">
          <Button
              android:id="@+id/button3"
              android:layout_width="200dp"
              android:layout_height="wrap_content"
              android:padding="8dp"
              android:background="#2196F3"
              android:text="@string/chapter_3"
              android:textSize="16sp"
              android:textStyle="bold"
              android:textColor="#FFFFFF" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linear10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:orientation="horizontal" />
        <LinearLayout
            android:id="@+id/linear12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:gravity="center_horizontal|center_vertical"
            android:orientation="horizontal">
          <Button
              android:id="@+id/button4"
              android:layout_width="200dp"
              android:layout_height="wrap_content"
              android:padding="8dp"
              android:background="#2196F3"
              android:text="@string/chapter_4"
              android:textSize="16sp"
              android:textStyle="bold"
              android:textColor="#FFFFFF" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linear11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" />
        <LinearLayout
            android:id="@+id/linear27"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:orientation="horizontal" />
        <LinearLayout
            android:id="@+id/linear13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="horizontal">
          <Button
              android:id="@+id/button5"
              android:layout_width="200dp"
              android:layout_height="wrap_content"
              android:padding="8dp"
              android:background="#2196F3"
              android:text="@string/chapter_5"
              android:textSize="16sp"
              android:textStyle="bold"
              android:textColor="#FFFFFF" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linear28"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:orientation="horizontal" />
        <LinearLayout
            android:id="@+id/linear14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="horizontal">
          <Button
              android:id="@+id/button6"
              android:layout_width="200dp"
              android:layout_height="wrap_content"
              android:padding="8dp"
              android:background="#2196F3"
              android:text="@string/chapter_6"
              android:textSize="16sp"
              android:textStyle="bold"
              android:textColor="#FFFFFF" />
        </LinearLayout>
      </LinearLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>